docs(readme): document direct JAR startup
Make the versioned Frostguard JAR the primary startup path for downloaded bundles. Explain that Windows 11 Smart App Control may block the unsigned batch launcher and provide a PowerShell command for startup diagnostics without disabling Windows security.\n\nValidation: git diff --check